Project review postponed. And we allknew it so we didn't work. But some progress on cpomparator

--- a/.cadence/dfII/viva/calcFuncPanelDefaults.ini
+++ b/.cadence/dfII/viva/calcFuncPanelDefaults.ini
@@ -1,3 +1,34 @@
+[fallTime]
+Final%20Value=0
+Final%20Value%20Type=y
+Initial%20Value=1.8
+Initial%20Value%20Type=y
+Number%20of%20occurrences=multiple
+Percent%20High=10
+Percent%20Low=90
+Plot\print%20vs.=cycle
+Signal=VT(\"/vout\")
+
+[period_jitter]
+Bin%20Size=0
+Cross%20Type=rising
+Output%20Type=plot
+Plot\print%20vs.=time
+Threshold=0.0
+Waveform=VT(\"/vout\")
+mode=auto
+
+[riseTime]
+Final%20Value=1.8
+Final%20Value%20Type=y
+Initial%20Value=0
+Initial%20Value%20Type=y
+Number%20of%20occurrences=multiple
+Percent%20High=90
+Percent%20Low=10
+Plot\print%20vs.=time
+Signal=VT(\"/vout\")
+
 [waveVsWave]
-Select%20xTrace=getData(\"NM0:gmoverid\" ?result \"dc\")/(2*3.14*getData(\"NM0:cgg\" ?result \"dc\"))
-Select%20yTrace=getData(\"NM0:gmoverid\" ?result \"dc\")
+Select%20xTrace=VT(\"/net34\")-VT(\"/net35\")
+Select%20yTrace=VT(\"/net35\")
